--- a/box1.html
+++ b/box1.html
@@ -82,6 +82,7 @@
         }
 
         .image {
+            height: 80%;
             top: 19%;
     width: 58%;
     left: 27%;
@@ -89,6 +90,7 @@
         }
 
         .image1 {
+            height: 100%;
             top: 9%;
     position: relative;
     right: 5%;
@@ -112,14 +114,13 @@
         }  
 
         #buttonContainer {
-         
-    width: 32%;
-    position: absolute;
-    bottom: 10%;
-    right: 55%;
+            width: 64%;
+    position: relative;
+    bottom: 63%;
+    right: -23%;
     display: flex;
     flex-direction: row;
-    gap: 13px;
+    gap: 18px;
     animation-name: slideInRight;
     animation-delay: 0.2s;
 }
