--- a/page2.html
+++ b/page2.html
@@ -49,7 +49,9 @@
         #backButton:hover {
             transform: scale(1.2);
         }
-
+        .groupButtonContainer button:hover {
+            transform: scale(1.2);
+    }
         #backButton {
             position: absolute;
             top: 29px;
@@ -204,86 +206,86 @@
      <div id="groupButtonsContainer">
         <!-- Hidden second row of buttons initially -->
         <div id="group1" class="groupButtonContainer" style="display: none;">
-            <button onclick="goToPage('image1.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_102.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('image1.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_202.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('image1.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_302.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('image1.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_402.png" alt="Icon 1">
             </button>
         </div>
         <div id="group2" class="groupButtonContainer" style="display: none;">
-            <button onclick="goToPage('image1.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_102.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('image1.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_202.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('image1.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_302.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('image1.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_402.png" alt="Icon 1">
             </button>
         </div>
         <div id="group3" class="groupButtonContainer" style="display: none;">
-            <button onclick="goToPage('image1.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_102.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('page2.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_202.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('page3.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_302.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('page4.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_402.png" alt="Icon 1">
             </button>
         </div>
         <div id="group4" class="groupButtonContainer" style="display: none;">
-            <button onclick="goToPage('page1.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_102.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('page2.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_202.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('page3.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_302.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('page4.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_402.png" alt="Icon 1">
             </button>
         </div>
         <div id="group5" class="groupButtonContainer" style="display: none;">
-            <button onclick="goToPage('image1.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_102.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('page2.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_202.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('page3.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_302.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('page4.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_402.png" alt="Icon 1">
             </button>
         </div>
         <div id="group6" class="groupButtonContainer" style="display: none;">
-            <button onclick="goToPage('page1.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_102.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('page2.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_202.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('page3.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_302.png" alt="Icon 1">
             </button>
-            <button onclick="goToPage('page4.html')">
+            <button onclick="goToPage('box1.html')">
                 <img src="./newimage/Menu_402.png" alt="Icon 1">
             </button>
         </div>
