--- a/box1.html
+++ b/box1.html
@@ -83,19 +83,19 @@
 
         .image {
         height: 80%;
-        top: 19%;
+        top: 12%;
         width: 58%;
-        left: 50%;
-        transform: translateX(-50%);
+        left: 27%;
+        /* transform: translateX(-50%); */
         position: relative;
     }
 
     .image1 {
-        height: 78%;
+        height: 100%;
     top: 10%;
     width: 100%;
-    left: 46%;
-    transform: translateX(-50%);
+    left: -4%;
+    /* transform: translateX(-50%); */
     position: relative;
     }
 
@@ -117,11 +117,10 @@
         }  
 
         #buttonContainer {
-       
-    width: 30%;
-    position: absolute;
-    bottom: 10%;
-    left: 27%;
+            width: 62%;
+    position: relative;
+    bottom: 56%;
+    left: 55%;
     transform: translateX(-50%);
     display: flex;
     flex-direction: row;
@@ -232,6 +231,10 @@
 
         .image1 {
             left: 0;
+        }
+
+        #buttonContainer {
+            bottom: 8%;
         }
     }
     </style>
