--- a/index.html
+++ b/index.html
@@ -4,89 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            overflow: hidden;
-            background-image: url('./newimage/BG.png');
-            background-repeat: no-repeat;
-            background-size: cover;
-            text-align: center;
-            overflow: hidden;
-        }
-
-        #container {
-            position: relative;
-            text-align: center;
-            width: 100vw;
-            height: 100vh;
-        }
-
-        #logoTop, #logoBottom {
-            width: 100%;
-            max-width: 28%;
-            height: auto;
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-        }
-
-        #logoTop {
-            top: 5%;
-        }
-
-        #logoBottom {
-            bottom: 5%;
-        }
-        #button {
-    width: 100%;
-    max-width: 849px;
-    height: 255px;
-    cursor: pointer;
-    background-color: transparent;
-    border: none;
-    background-image: url('./newimage/homebtn.png');
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-#button:hover {
-    transform: translate(-50%, -50%) scale(1.2);
-}
-        @media only screen and (max-width: 768px) {
-            /* Add styles for smaller screens if needed */
-            #logoTop, #logoBottom {
-                max-width: 50%;
-            }
-
-            #button {
-                width: 90%;
-            }
-        }
-        
-    </style>
     <title>Gmmco</title>
 </head>
 <body>
     <div id="container">
-        <img id="logoTop" src="./newimage/logo.png" alt="Top Logo">
-        <button id="button" onclick="goToNextPage()">
-        </button>
-        <img id="logoBottom" src="./newimage/homedowntext.png" alt="Bottom Logo">
+        <video id="video" autoplay loop muted>
+            <source src="./images/videohome.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <img id="logo1" src="./images/gmmcologo.jpg" alt="Gmmco Logo">
+        <button id="button"  onclick="goToNextPage()">Lets Go</button>
     </div>
     <script>
+        // You may want to use a different event like "ended" to trigger the next page
+      
         function goToNextPage() {
+            // Redirect to the next page
             window.location.href = 'next-page.html';
         }
     </script>
