--- a/box1.html
+++ b/box1.html
@@ -199,10 +199,10 @@
 <body>
     <div class="boxco">
         <img id="logoTop" src="./newimage/logo.png" alt="Top Logo">
-        <div class="backButton" onclick="goBack()">
+        <div class="backButton01" onclick="goBack()">
             <img src="./newimage/newback.png" alt="Back Button">
         </div>
-        <div class="backButton01"  onclick="goToHome('next-page.html')">
+        <div class="backButton"  onclick="goToHome('next-page.html')">
             <img src="./newimage/home.png" alt="Back Button">
         </div>
        
