--- a/page1.html
+++ b/page1.html
@@ -92,7 +92,7 @@
             background-color: transparent;
             border: none;
             overflow: hidden;
-            background-image: url(./newimage/newback.png);
+            background-image: url(./newimage/home.png);
             background-repeat: no-repeat;
             background-size: cover;
         }
@@ -105,7 +105,7 @@
             background-color: transparent;
             border: none;
             overflow: hidden;
-            background-image: url(./newimage/home.png);
+            background-image: url(./newimage/newback.png);
             background-repeat: no-repeat;
             background-size: cover;
         }
@@ -172,8 +172,8 @@
 <body>
     <div id="container">
         <img id="logoTop" src="./newimage/logo.png" alt="Top Logo">
-        <button id="backButton" onclick="goBack()"></button>
-        <button id="backButton01" onclick="goToHome('next-page.html')"></button>
+        <button id="backButton01" onclick="goBack()"></button>
+        <button id="backButton" onclick="goToHome('next-page.html')"></button>
         <div id="buttonContainer">
             <div class="imageLink" onclick="goToPage('box1.html')">
                 <img id="img01" src="./newimage/2000btn1.png" alt="Image 1">
