--- a/page1.html
+++ b/page1.html
@@ -120,7 +120,7 @@
         #buttonContainer {
             margin-right: -6%;
     margin-left: 2%;
-    margin-bottom: -42%;
+    margin-bottom: -95%;
     grid-area: buttons;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -136,7 +136,7 @@
             border-top-right-radius: 30px;
             border-bottom-left-radius: 30px;
             cursor: pointer;
-            margin-bottom: 135px; /* Adjust the margin as needed */
+            margin-bottom: 194%; /* Adjust the margin as needed */
             width: 73%; /* Adjust the width as needed */
         }
 
@@ -156,14 +156,14 @@
 
     @media only screen and (max-width: 480px) {
         #buttonContainer {
-            margin-left: 22%;
-    margin-top: 50%;
-    margin-bottom: -12%;
+            margin-left: 15%;
+    margin-top: -4%;
+    margin-bottom: -62%;
     grid-template-columns: repeat(2, 1fr);
             } 
             .imageLink {
-                margin-bottom: 46px;
-    width: 59%;
+                margin-bottom: 23%;
+    width: 49%;
             }
 
     }
