--- a/next-page.html
+++ b/next-page.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -33,7 +34,8 @@
             height: 100%;
         }
 
-        #logoTop, #logoBottom {
+        #logoTop,
+        #logoBottom {
             width: 100%;
             max-width: 28%;
             height: auto;
@@ -52,9 +54,11 @@
 
         #buttonContainer {
             grid-area: buttons;
+            margin-right: 120px;
+            margin-left: 120px;
             display: grid;
-            grid-template-columns: repeat(4, 1fr); /* Four buttons, adjust as needed */
-            gap: 20px;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 0px;
             justify-content: center;
             align-items: center;
         }
@@ -70,7 +74,7 @@
 
         .imageLink img {
             box-sizing: border-box;
-            width: 81%;
+            width: 75%;
             height: auto;
             border: 0;
             border-top-right-radius: 30px;
@@ -78,54 +82,63 @@
             transition: transform 0.3s;
         }
 
-        .imageLink:hover {
+        /* .imageLink:hover {
             transform: scale(1.2);
-        }
+        } */
 
         .imageLink:hover img {
-            content: url('./newimage/Electric\ Powerhov.png'); /* Change to the actual hover image path */
+            content: url('./newimage/Electric\ Powerhov.png');
+            /* Change to the actual hover image path */
         }
 
         .imageLink:hover #img02 {
-            content: url('./newimage/Industrial\ Enginehov.png'); /* Change to the actual hover image path */
+            content: url('./newimage/Industrial\ Enginehov.png');
+            /* Change to the actual hover image path */
         }
 
         .imageLink:hover #img03 {
-            content: url('./newimage/Partshov1.png'); /* Change to the actual hover image path */
+            content: url('./newimage/Partshov1.png');
+            /* Change to the actual hover image path */
         }
 
         .imageLink:hover #img04 {
-            content: url('./newimage/Partshove2.png'); /* Change to the actual hover image path */
+            content: url('./newimage/Partshove2.png');
+            /* Change to the actual hover image path */
         }
 
-       /* ... (your existing styles) ... */
+        /* ... (your existing styles) ... */
 
-       @media only screen and (max-width: 768px) {
-    #logoTop, #logoBottom {
-        max-width: 80%;
-    }
+        @media only screen and (max-width: 600px) {
 
-    #buttonContainer {
-        margin-top: 0%;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 79px;
-    overflow-x: auto;
-    white-space: nowrap;
-    height: 57vh;
-    }
+            #logoTop,
+            #logoBottom {
+                max-width: 80%;
+            }
 
-    .imageLink {
-        margin-right: 0; /* Remove spacing between images */
-    }
+            #buttonContainer {
+                margin-top: 0%;
+                margin-right: 20px;
+                margin-left: 24px;
+                grid-template-columns: repeat(2, 1fr);
+                gap: 49px;
+                overflow-x: auto;
+                white-space: nowrap;
+                height: 57vh;
+            }
 
-    .imageLink img {
-        width: 100%; /* Adjust image width to fill the container */
-    }
-}
+            .imageLink {
+                margin-right: 0;
+                /* Remove spacing between images */
+            }
 
-
+            .imageLink img {
+                width: 100%;
+                /* Adjust image width to fill the container */
+            }
+        }
     </style>
 </head>
+
 <body>
     <div id="container">
         <img id="logoTop" src="./newimage/logo.png" alt="Top Logo">
@@ -153,4 +166,5 @@
         }
     </script>
 </body>
+
 </html>
