--- a/next-page.html
+++ b/next-page.html
@@ -82,9 +82,9 @@
             transition: transform 0.3s;
         }
 
-        /* .imageLink:hover {
+        .imageLink:hover {
             transform: scale(1.2);
-        } */
+        }
 
         .imageLink:hover img {
             content: url('./newimage/Electric\ Powerhov.png');
