--- a/box14.html
+++ b/box14.html
@@ -350,7 +350,7 @@ margin-bottom: 4%;
         }
         .button {
         flex-basis: calc(100% - 9px); /* Full width for buttons on smaller screens */
-        margin-bottom: 18px; /* Adjust the margin between buttons */
+        margin-bottom: 18px; 
     }
 
     }
