--- a/box14.html
+++ b/box14.html
@@ -437,21 +437,21 @@ margin-bottom: 4%;
 <script>
     // Define arrays for original and hover images
     var originalImages = [
-        '/newimage/frame3/T4.png',
-        '/newimage/frame3/T5.png',
-        '/newimage/frame3/T6.png',
-        '/newimage/frame3/T7.png',
-        '/newimage/frame3/T8.png',
-        '/newimage/frame3/T9.png'
+        './newimage/frame3/T4.png',
+        './newimage/frame3/T5.png',
+        './newimage/frame3/T6.png',
+        './newimage/frame3/T7.png',
+        './newimage/frame3/T8.png',
+        './newimage/frame3/T9.png'
     ];
 
     var hoverImages = [
     '/newimage/frame3/T4hov.png',
-        '/newimage/frame3/T5hov.png',
-        '/newimage/frame3/T6hov.png',
-        '/newimage/frame3/T7hov.png',
-        '/newimage/frame3/T8hov.png',
-        '/newimage/frame3/T9hov.png'
+        './newimage/frame3/T5hov.png',
+        './newimage/frame3/T6hov.png',
+        './newimage/frame3/T7hov.png',
+        './newimage/frame3/T8hov.png',
+        './newimage/frame3/T9hov.png'
     ];
 
     function changeText(newText) {
