--- a/box14.html
+++ b/box14.html
@@ -403,25 +403,25 @@ margin-bottom: 4%;
         <div id="buttonContainer">
             <div class="button-row">
                 <button class="button button1" onclick="changeImage('./newimage/frame3/content04.png', this)">
-                    <img class="0ne" id="img01" src="/newimage/frame3/T4hov.png" alt="Button 3 Image">
+                    <img class="0ne" id="img01" src="./newimage/frame3/T4hov.png" alt="Button 3 Image">
                 </button>
                 <button class="button button2" onclick="changeImage('./newimage/frame3/content04_1.png', this)">
-                    <img class="0ne" id="img02" src="/newimage/frame3/T5.png" alt="Button 4 Image">
+                    <img class="0ne" id="img02" src="./newimage/frame3/T5.png" alt="Button 4 Image">
                 </button>
                 <button class="button button3" onclick="changeImage('./newimage/frame3/content04_2.png', this)">
-                    <img class="0ne" id="img03" src="/newimage/frame3/T6.png" alt="Button 5 Image">
+                    <img class="0ne" id="img03" src="./newimage/frame3/T6.png" alt="Button 5 Image">
                 </button>
                 <button class="button button4" onclick="changeImage('./newimage/frame3/content04_3.png', this)">
-                    <img class="0ne"  id="img04" src="/newimage/frame3/T7.png" alt="Button 6 Image">
+                    <img class="0ne"  id="img04" src="./newimage/frame3/T7.png" alt="Button 6 Image">
                 </button>
             </div>
            <!-- Corrected onclick attribute by passing 'this' (the clicked button) as an argument -->
            <div class="button-row">
             <button class="button button5" onclick="changeImage('./newimage/frame3/content04_4.png', this)">
-                <img id="img05" src="/newimage/frame3/T8.png" alt="Button 1 Image">
+                <img id="img05" src="./newimage/frame3/T8.png" alt="Button 1 Image">
             </button>
             <button class="button button6" onclick="changeImage('./newimage/frame3/content04_5.png', this)">
-                <img id="img06" src="/newimage/frame3/T9.png" alt="Button 2 Image">
+                <img id="img06" src="./newimage/frame3/T9.png" alt="Button 2 Image">
             </button>
         </div>
         <!-- 4 buttons in the second row -->
