--- a/index.html
+++ b/index.html
@@ -7,21 +7,33 @@
     <style>
         body {
             margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            overflow: hidden;
-            background-image: url('./newimage/BG.png');
-            background-repeat: no-repeat;
-            background-size: cover;
-            text-align: center;
-            overflow: hidden;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    overflow: hidden;
+    background-image: url('./newimage/welcomepage.jpg');
+    background-repeat: no-repeat, no-repeat;
+    background-size: cover, cover;
+    text-align: center;
+    overflow: hidden;
         }
-
+         
+        @keyframes buttonAnimation {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
         #container {
+          
             position: relative;
             text-align: center;
             width: 100vw;
@@ -42,23 +54,24 @@
         }
 
         #logoBottom {
+            display: none;
             bottom: 5%;
         }
         #button {
-    width: 100%;
-    max-width: 849px;
+            width: 100%;
+    max-width: 729px;
     height: 255px;
     cursor: pointer;
     background-color: transparent;
     border: none;
-    background-image: url('./newimage/homebtn.png');
+    background-image: url(./newimage/homebtn.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 24%;
+    left: 32%;
+    animation: buttonAnimation 1s infinite;
 }
 
 #button:hover {
@@ -80,7 +93,7 @@
 </head>
 <body>
     <div id="container">
-        <img id="logoTop" src="./newimage/logo.png" alt="Top Logo">
+        <img id="logoTop" src="./newimage/welcomelogo.png" alt="Top Logo">
         <button id="button" onclick="goToNextPage()">
         </button>
         <img id="logoBottom" src="./newimage/homedowntext.png" alt="Bottom Logo">
