--- a/4000series.html
+++ b/4000series.html
@@ -78,7 +78,7 @@
         }
 
         #buttonContainer {
-            margin-bottom: 11%;
+            margin-bottom: 12%;
             grid-area: buttons;
             margin-right: 120px;
             margin-left: 120px;
@@ -100,7 +100,7 @@
 
         .imageLink img {
             box-sizing: border-box;
-            width: 66%;
+            width: 54%;
             height: auto;
             border: 0;
             border-top-right-radius: 30px;
@@ -156,17 +156,17 @@
         </div>
         <img id="logoTop" src="./newimage/welcomelogo.png" alt="Top Logo">
         <div id="buttonContainer">
-            <div class="imageLink" onclick="goToPage('image3.html')">
+            <div class="imageLink" onclick="goToPage('4000menu1.html')">
                 <img id="img01" src="./newimage/400series/Menu_01.png" alt="Image 1">
             </div>
-            <div class="imageLink" onclick="goToPage('image3.html')">
+            <div class="imageLink" onclick="goToPage('4000menu2.html')">
                 <img id="img02" src="./newimage/400series/Menu_02.png" alt="Image 2">
             </div>
             <!-- Add two more image links as needed -->
-            <div class="imageLink" onclick="goToPage('image3.html')">
+            <div class="imageLink" onclick="goToPage('4000menu3.html')">
                 <img id="img03" src="./newimage/400series/Menu_03.png" alt="Image 3">
             </div>
-            <div class="imageLink" onclick="goToPage('image3.html')">
+            <div class="imageLink" onclick="goToPage('4000menu4.html')">
                 <img id="img04" src="./newimage/400series/Menu_04.png" alt="Image 4">
             </div>
         </div>
