--- a/next-page.html
+++ b/next-page.html
@@ -33,7 +33,17 @@
             width: 100%;
             height: 100%;
         }
-
+        @keyframes buttonAnimation {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
         #logoTop,
         #logoBottom {
             width: 100%;
@@ -70,6 +80,7 @@
             border-top-right-radius: 30px;
             border-bottom-left-radius: 30px;
             cursor: pointer;
+           
         }
 
         .imageLink img {
