--- a/page2.html
+++ b/page2.html
@@ -304,7 +304,7 @@
 
 <body>
     <div id="container">
-        <img id="logoTop" src="./newimage/logo.png" alt="Top Logo">
+        <img id="logoTop" src="./newimage/welcomelogo.png" alt="Top Logo">
         <button id="backButton01" onclick="goToHome('next-page.html')"></button>
         <button id="backButton" onclick="goBack()"></button>
         <button id="back01" onclick="showPreviousGroup()"></button>
