--- a/page1.html
+++ b/page1.html
@@ -14,7 +14,7 @@
             justify-content: center;
             height: 100vh;
             overflow: hidden;
-            background-image: url('./newimage/BG.png');
+            background-image: url('./newimage/electricbg.jpg');
             background-repeat: no-repeat;
             background-size: cover;
             text-align: center;
