--- a/4000series.html
+++ b/4000series.html
@@ -20,7 +20,17 @@
             text-align: center;
             overflow: hidden;
         }
-
+        @keyframes buttonAnimation {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
         #container {
             display: grid;
             grid-template-areas:
@@ -96,6 +106,7 @@
             border-top-right-radius: 30px;
             border-bottom-left-radius: 30px;
             cursor: pointer;
+            animation: buttonAnimation 1.5s infinite;
         }
 
         .imageLink img {
