--- a/page1.html
+++ b/page1.html
@@ -34,8 +34,8 @@
             height: 100%;
         }
 
-        #logoTop,
-        #logoBottom {
+        #logoTop
+        {
             width: 100%;
             max-width: 28%;
             height: auto;
@@ -43,19 +43,38 @@
             left: 50%;
             transform: translateX(-50%);
         }
-
+        #logoBottom
+        {
+            width: 100%;
+            max-width: 75%;
+            height: auto;
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+        }
         #logoTop {
-            top: 5%;
+            top: 3%;
         }
 
         #logoBottom {
-            bottom: 5%;
+            bottom: 7%;
         }
-
+        @keyframes buttonAnimation {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
         #buttonContainer {
-            grid-area: buttons;
-    margin-right: 400px;
-    margin-left: 400px;
+            margin-bottom: 22%;
+    grid-area: buttons;
+    margin-right: 468px;
+    margin-left: 468px;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 0px;
@@ -71,6 +90,7 @@
     cursor: pointer;
     text-align: center;
     animation: fadeIn 1s forwards; /* Added animation property */
+    animation: buttonAnimation 1s infinite;
 }
 
        .backButton {
@@ -101,7 +121,7 @@
         }
         .imageLink img {
             box-sizing: border-box;
-            width: 75%;
+            width: 65%;
             height: auto;
             border: 0;
             border-top-right-radius: 30px;
@@ -188,7 +208,7 @@
             <!-- Add two more image links as needed -->
            
         </div>
-        <!-- <img id="logoBottom" src="./newimage/homedowntext.png" alt="Bottom Logo"> -->
+        <img id="logoBottom" src="./newimage/Tab_textelectric.png" alt="Bottom Logo">
     </div>
 
     <script>
