--- a/next-page.html
+++ b/next-page.html
@@ -175,6 +175,19 @@
         function goToPage(page) {
             window.location.href = page;
         }
+          // Function to automatically redirect after a certain time
+    function autoRedirect() {
+        // Set the timeout duration in milliseconds (e.g., 5000 for 5 seconds)
+        const timeoutDuration = 30000;
+
+        setTimeout(() => {
+            // Specify the default page to redirect to
+            goToPage('index.html');
+        }, timeoutDuration);
+    }
+
+    // Call the autoRedirect function when the page loads
+    window.onload = autoRedirect;
     </script>
 </body>
 
