--- a/page3.html
+++ b/page3.html
@@ -43,13 +43,13 @@
       #Two{
         width: 39%;
     margin-top: 4%;
-    margin-left: 8%;
+    margin-left: 6%;
       }
 
       
       #Three{
         width: 47%;
-    margin-top: 10%;
+    margin-top: 4%;
     margin-left: 6%;
       }
 
@@ -227,10 +227,18 @@
             <source src="./newimage/partsimage/1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+        <img src="./newimage/partsimage/Parts selection.png" alt="Image 1" style="    width: 16%;
+        max-width: 800px;
+        margin-top: 270px;
+        margin-left: 6%;">
+         <img src="./newimage/partsimage/Contentpart.png" alt="Image 1" style="width: 100%;
+         max-width: 1600px;
+         margin-top: 122px;
+         margin-left: 16%;">
         <img src="./newimage/partsimage/heading.png" alt="Image 1" style="    width: 9%;
         max-width: 800px;
         margin-top: 270px;
-        margin-left: 166px;">
+        margin-left: 6%;">
 
         <!-- Video 2 -->
         <video id="Two" autoplay>
@@ -240,25 +248,25 @@
         <img src="./newimage/partsimage/text1.png" alt="Image 2" style="   width: 100%;
         max-width: 1165px;
         margin-top: 27px;
-        margin-left: 150px;">
-          <img id="text2" src="./newimage/partsimage/text2.png" alt="Image 2" style="    width: 100%;
+        margin-left: 6%;">
+          <img id="text2" src="./newimage/partsimage/text2.png" alt="Image 2" style="     width: 100%;
           max-width: 548px;
-          margin-top: 108%;
-          margin-left: 71%;
+          margin-top: 207%;
+          margin-left: 69%;
           position: absolute;
           z-index: 1;">
 
           <!-- Text Image 3 -->
           <img id="text3" src="./newimage/partsimage/text3.png" alt="Image 3" style="      width: 100%;
           max-width: 327px;
-          margin-top: 93%;
+          margin-top: 197%;
           margin-left: 50%;
           position: absolute;
           z-index: 1;">
            <img src="./newimage/partsimage/heading2.png" alt="Image 1" style="    width: 9%;
         max-width: 800px;
-        margin-top: 270px;
-        margin-left: 166px;">
+        margin-top: 589px;
+        margin-left: 6%;">
 
         <!-- Video 2 -->
         <video id="Three" autoplay>
@@ -274,7 +282,10 @@
             Your browser does not support the video tag.
         </video> -->
         <!-- Image 2 -->
-        <img src="./newimage/partsimage/lasttext.jpg" alt="Image 2" style="width: 100%; max-width: 800px; margin-top: 20px;">
+        <img src="./newimage/partsimage/lasttext.jpg" alt="Image 2" style="width: 100%;
+        margin-left: 181px;
+        max-width: 1500px;
+        margin-top: 20px;">
 
         <!-- <div id="buttonContainer">
             <div class="imageLink" >
