--- a/page1.html
+++ b/page1.html
@@ -45,7 +45,7 @@
         }
         #logoBottom
         {
-            width: 100%;
+            width: 18%;
             max-width: 75%;
             height: auto;
             position: absolute;
@@ -57,7 +57,7 @@
         }
 
         #logoBottom {
-            bottom: 7%;
+            bottom: 2%;
         }
         @keyframes buttonAnimation {
     0% {
@@ -208,7 +208,7 @@
             <!-- Add two more image links as needed -->
            
         </div>
-        <img id="logoBottom" src="./newimage/Tab_textelectric.png" alt="Bottom Logo">
+        <!-- <img id="logoBottom" src="./newimage/partsimage/Together, we power ahead..png" alt="Bottom Logo"> -->
     </div>
 
     <script>
