--- a/page2.html
+++ b/page2.html
@@ -14,7 +14,7 @@
             justify-content: center;
             height: 100vh;
             overflow: hidden;
-            background-image: url('./newimage/mainmenu/homebg.png');
+            background-image: url('./newimage/industrialengine/Industrial\ Engines\ _Main_Menubg.jpg');
             background-repeat: no-repeat;
             background-size: cover;
             text-align: center;
