--- a/page1.html
+++ b/page1.html
@@ -71,10 +71,10 @@
     }
 }
         #buttonContainer {
-            margin-bottom: 22%;
+            margin-bottom: 25%;
     grid-area: buttons;
-    margin-right: 468px;
-    margin-left: 468px;
+    margin-right: 10%;
+    margin-left: 59%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 0px;
@@ -121,7 +121,7 @@
         }
         .imageLink img {
             box-sizing: border-box;
-            width: 65%;
+            width: 85%;
             height: auto;
             border: 0;
             border-top-right-radius: 30px;
