--- a/next-page.html
+++ b/next-page.html
@@ -44,8 +44,8 @@
         transform: scale(1);
     }
 }
-        #logoTop,
-        #logoBottom {
+        #logoTop
+       {
             width: 100%;
             max-width: 28%;
             height: auto;
@@ -54,6 +54,15 @@
             transform: translateX(-50%);
         }
 
+     
+        #logoBottom {
+            width: 100%;
+    max-width: 7%;
+    height: auto;
+    position: absolute;
+    left: 93%;
+    transform: translateX(-50%);
+        }
         #logoTop {
             top: 5%;
         }
@@ -183,7 +192,7 @@
                 <img id="img04" src="./newimage/mainmenu/menu_04.png" alt="Image 4">
             </div>
         </div>
-        <!-- <img id="logoBottom" src="./newimage/homedowntext.png" alt="Bottom Logo"> -->
+        <img id="logoBottom" src="./newimage/mainmenu/scann.png" alt="Bottom Logo">
     </div>
 
     <script>
