--- a/page4.html
+++ b/page4.html
@@ -129,6 +129,12 @@ body {
         transform: scale(1);
     }
 }
+#img05:hover{
+content: url('./newimage/serviceimage/left_texthov.png');
+}
+#img06:hover{
+content: url('./newimage/serviceimage/Right_texthov.png');
+}
 #imagesContainer {
     grid-area: images;
     display: grid;
