--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
     <style>
         body {
+            width: 100%;
+            height: 100%;
             margin: 0;
     padding: 0;
     display: flex;
@@ -13,7 +15,7 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
- 
+
     background-image: url('./newimage/welcomepage.jpg');
     background-repeat: no-repeat, no-repeat;
     background-size: cover, cover;
