--- a/industruialmenu1.html
+++ b/industruialmenu1.html
@@ -277,6 +277,26 @@
         /* .imageLink.active {
         content: url('./newimage/Industrial_Engine_Menu_01\ \(1\)hov.png');
     } */
+
+    @media only screen and (max-width: 1355px) {
+        .groupButtonContainer {
+               margin-left: 23%;
+                gap: 130px;
+            }
+#back01{
+    top: 278px;
+    left: 21px;
+}
+#next01{
+    top: 278px;
+    right: 21px;
+}
+.imageLink {
+                width: 147px;
+              
+            }
+
+    }
         @media only screen and (max-width: 768px) {
             #buttonContainer {
                 margin-top: 14%;
