--- a/industruialmenu2.html
+++ b/industruialmenu2.html
@@ -276,6 +276,25 @@
             align-items: center;
         }
 
+        @media only screen and (max-width: 1355px) {
+        .groupButtonContainer {
+               margin-left: 15%;
+                gap: 130px;
+            }
+#back01{
+    top: 278px;
+    left: 21px;
+}
+#next01{
+    top: 278px;
+    right: 21px;
+}
+.imageLink {
+                width: 147px;
+              
+            }
+
+    }
         /* .imageLink.active {
         content: url('./newimage/Industrial_Engine_Menu_01\ \(1\)hov.png');
     } */
