--- a/page4.html
+++ b/page4.html
@@ -173,7 +173,14 @@ content: url('./newimage/serviceimage/Right_texthov.png');
     animation-delay: 0.5s;
 }
 
+@media only screen and (max-width: 1355px) {
+       
+    #imagesContainer {
+    
+    margin-bottom: 4%;
 
+}
+    }
 @media only screen and (max-width: 768px) {
     #buttonContainer {
         margin-right: -6%;
