--- a/service2.html
+++ b/service2.html
@@ -99,6 +99,13 @@
 #button:hover {
     transform: translate(-50%, -50%) scale(1.2);
 }
+@media only screen and (max-width: 1355px) {
+       
+       #logoBottom {
+       
+      max-width: 78%;
+   
+   }}
         @media only screen and (max-width: 768px) {
             /* Add styles for smaller screens if needed */
             #logoTop, #logoBottom {
