--- a/industruialmenu1.html
+++ b/industruialmenu1.html
@@ -297,6 +297,29 @@
             }
 
     }
+    @media only screen and (max-width: 998px) {
+        .groupButtonContainer {
+               margin-left: 18%;
+                gap: 80px;
+            }
+#back01{
+    top: 339px;
+    left: 21px;
+}
+#next01{
+    top: 339px;
+    right: 21px;
+}
+.imageLink {
+                width: 118px;
+              
+            }
+            .groupButtonContainer button img {
+    width: 170px;
+    height: auto;
+}
+
+    }
         @media only screen and (max-width: 768px) {
             #buttonContainer {
                 margin-top: 14%;
