--- a/industruialmenu2.html
+++ b/industruialmenu2.html
@@ -295,6 +295,30 @@
             }
 
     }
+    
+    @media only screen and (max-width: 998px) {
+        .groupButtonContainer button img {
+    width: 170px;
+    height: auto;
+}
+        .groupButtonContainer {
+               margin-left: 15%;
+                gap: 80px;
+            }
+#back01{
+    top: 278px;
+    left: 21px;
+}
+#next01{
+    top: 278px;
+    right: 21px;
+}
+.imageLink {
+                width: 147px;
+              
+            }
+
+    }
         /* .imageLink.active {
         content: url('./newimage/Industrial_Engine_Menu_01\ \(1\)hov.png');
     } */
