--- a/part3.html
+++ b/part3.html
@@ -157,7 +157,7 @@
         width: 100%;
         margin-left: 181px;
         max-width: 1500px;
-        margin-top: 5%;"
+        margin-top: 5%;
         }
         @media only screen and (max-width: 768px) {
 
@@ -203,6 +203,14 @@
             }
         }
         @media only screen and (max-width: 1355px) {
+        #text1{
+      width: 100%;
+    margin-left: 155px;
+    max-width: 82%;
+    margin-top: 8%;
+        }
+   }
+   @media only screen and (max-width: 998px) {
         #text1{
       width: 100%;
     margin-left: 155px;
