--- a/part1.html
+++ b/part1.html
@@ -198,6 +198,15 @@
 
    
    }
+   @media only screen and (max-width: 998px) {
+            #mainVideo{
+             
+        max-width: 570px;
+   
+      }
+
+   
+   }
         /* @media only screen and (max-width: 480px) {
             #buttonContainer {
                 margin-left: 15%;
